Fix layout issues, CNAME missing on publish (#3)
* Fix layout things

* Smaller

* One more

* CNAME plugin

* Theme cleanup

--- a/themes/aalmazan/css/styles.css
+++ b/themes/aalmazan/css/styles.css
@@ -10,3 +10,7 @@ body h1, body h2 {
   font-family: "Roboto Slab", "Arial", sans-serif;
   font-weight: 400;
 }
+
+.highlight  {
+  max-width: 0;
+}
